# dtu_mlops

./: model_weights.pth
.dvc/: config
Corrupted_MNIST/: Makefile  README.md  data.dvc  pyproject.toml
Corrupted_MNIST/corrupted_mnist_mlops/: __init__.py  train_model.py
Corrupted_MNIST/corrupted_mnist_mlops/data/: make_dataset.py
Corrupted_MNIST/corrupted_mnist_mlops/models/: model.py
Corrupted_MNIST/docs/: mkdocs.yaml
Corrupted_MNIST/docs/source/: index.md
Corrupted_MNIST/models/: model.py
s1_development_environment/exercise_files/final_exercise/: data.py  main.py  model.py
