[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Corrupted_MNIST"
version = "0.0.1"
description = "An example project for the MLOps course at DTU."
authors = [
  { name = "Michael A. Harborg", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.9.13"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["Corrupted_MNIST"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
